# ImgStacker

./: CMakeLists.txt  README.md
doc/: class_diagram.drawio  sequence_diagram.drawio
include/: ImgReader.hpp  RawImgReader.hpp
src/: RawImgReader.cpp  main.cpp
